<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_project_feed">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="br.com.extensaoufpb.extensaoufpb.activity.ui.menu.MenuFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="br.com.extensaoufpb.extensaoufpb.activity.ui.inicio.InicioFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="br.com.extensaoufpb.extensaoufpb.activity.ui.perfil.PerfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_project_feed"
        android:name="br.com.extensaoufpb.extensaoufpb.activity.ui.project_feed.ProjectFeedFragment"
        android:label="@string/project_file"
        tools:layout="@layout/fragment_project_feed" />

</navigation>